<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NextGenBERMobileApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="footer_text">Global Systems Technologies Inc.</string>
    <string name="header_second_text">Business Expense Report</string>
    <string name="header_login">Login</string>
    <string name="header_Select_Week">Select Week</string>
    <string name="header_Business_Expenses">Business Expense Report</string>
    <string name="select_day">Select Day</string>
    <string name="week_day">Week Date:</string>
    <string name="SavedText">Saved</string>
    <string name="SubmitText">Submitted</string>
    <string name="ApprovedText">Approved</string>
    <string name="SubmittedText">Submitted</string>
    <string name="ReturnedText">Returned</string>
    <string name="EnterExpenses">Enter Expenses</string>
    <string name="TripInfo">Enter Trip Info</string>
    <string name="LocationForm">Location Form</string>
    <string name="LocationTo">Location To</string>
    <string name="SelectTask">Select Task</string>
    <string name="Purpose">Purpose </string>
    <string name="Note">Note</string>
    <string name="ExpensesText">Enter/Update Expense</string>
    <string name="LocationDetails">Select Location</string>
    <string name="TaskDetails">Select Task</string>
    <string name="spinner_prompt">Select Expenses Amt</string>
    <string name="Attachments">Attachments</string>

</resources>
