<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/top_header"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:src="@drawable/loginbg_img" />

            <TextView
                android:id="@+id/textView3"
                style="@style/Footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="5dp"
                android:text="@string/header_login"
                android:textSize="@dimen/login_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                style="@style/Footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_second_text"
                android:textSize="@dimen/business_expenses_report" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Footer"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/footer_bg"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            style="@style/Footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer_text"
            android:textSize="@dimen/footer_text" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/Footer"
        android:layout_below="@+id/Header"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:id="@+id/Middle"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/Footer"
            android:layout_below="@+id/Header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:background="@drawable/body_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/CorpId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/inputbox"
                    android:drawableLeft="@drawable/cropid_icon"
                    android:drawablePadding="10dp"
                    android:hint="Corp Id"
                    android:inputType="text"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/footer_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/UserId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/inputbox"
                    android:drawableLeft="@drawable/userid_icon"
                    android:drawablePadding="10dp"
                    android:hint="User Id"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/footer_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/inputbox"
                    android:drawableLeft="@drawable/password_icon"
                    android:drawablePadding="10dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="@dimen/footer_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <CheckBox
                    android:id="@+id/remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/customcheckbox"
                    android:text="  Remember me?" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/LoginImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:src="@drawable/login_btn" />

                <ImageView
                    android:id="@+id/exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:clickable="true"
                    android:src="@drawable/exit_btn" />
            </LinearLayout>

            <!--
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:text="fgjkshgkfg" />
        </FrameLayout>
            -->
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Footer"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="5dp"
        android:text="Ver : 1.0  2014.12.04 "
        android:textSize="10dp" />

</RelativeLayout>